# win-quick-shuttle

./: .gitignore  README.md  pyproject.toml  spec.json
guitests/: test_ui.py
src/win_quick_shuttle/: __init__.py  cli.py  main.py
src/win_quick_shuttle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_main.py  test_ui.py
